--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_apirest?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -5,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate.SQL=debug
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
